service/user/build/service-uat.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: user-uat
    app: user
    environment: uat
    namespace: default
  name: user-uat
  namespace: default
spec:
  ports:
    - name: http
      appProtocol: http
      port: 8000
      targetPort: http
  selector:
    name: user-uat
