service/user/build/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: user
    app: user
    namespace: default
  name: user
  namespace: default
spec:
  ports:
    - name: http
      appProtocol: http
      port: 8000
      targetPort: http
  selector:
    app: user
