service/user/build/istio-uat.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-uat
  namespace: default
spec:
  hosts:
    - user-uat.default.svc.cluster.local
  http:
    - match:
        - port: 8000
      route:
        - destination:
            host: user-uat.default.svc.cluster.local
            port:
              number: 8000
      retries:
        attempts: 3
        perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-uat
spec:
  host: user-uat.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 3
      http:
        maxRequestsPerConnection: 10
