service/user/build/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
  namespace: default
spec:
  hosts:
    - user.default.svc.cluster.local
  http:
    - match:
        - port: 8000
      route:
        - destination:
            host: user.default.svc.cluster.local
            port:
              number: 8000
      timeout: 10s
